test/src/sysy.output
State 43 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: DefUnits

    2 DefUnits: DefUnits DefUnit
    3         | DefUnit

    4 DefUnit: FuncDef
    5        | Sent

    6 FuncDef: DeclarationType IDENT '(' ')' Block

    7 DeclarationType: BasicType

    8 BasicType: INT
    9          | VOID
   10          | FLOAT

   11 Block: '{' Stmt '}'

   12 Stmt: Sents

   13 Sents: Sents Sent
   14      | Sent

   15 Sent: Assignments ';'
   16     | RETURN Expr ';'
   17     | Declarationlist ';'

   18 Expr: CalExpr
   19     | Expr '>' CalExpr
   20     | Expr '<' CalExpr
   21     | Expr '>' '=' CalExpr
   22     | Expr '<' '=' CalExpr
   23     | Expr '=' '=' CalExpr
   24     | Expr '!' '=' CalExpr

   25 CalExpr: CalExpr '+' Expr_prio1
   26        | CalExpr '-' Expr_prio1
   27        | Expr_prio1

   28 Expr_prio1: Expr_prio1 '*' Expr_prio2
   29           | Expr_prio1 '/' Expr_prio2
   30           | Expr_prio1 '%' Expr_prio2
   31           | Expr_prio2

   32 Expr_prio2: '(' Expr ')'
   33           | Number
   34           | IDENT

   35 Declarationlist: DeclarationType Declarations

   36 Declarations: Declarations ',' Declaration
   37             | Declaration

   38 Declaration: IDENT
   39            | IDENT '=' Expr

   40 Assignments: IDENT '=' Assignments
   41            | Assignment

   42 Assignment: IDENT '=' Expr

   43 Number: INT_CONST


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 24
    '%' (37) 30
    '(' (40) 6 32
    ')' (41) 6 32
    '*' (42) 28
    '+' (43) 25
    ',' (44) 36
    '-' (45) 26
    '/' (47) 29
    ';' (59) 15 16 17
    '<' (60) 20 22
    '=' (61) 21 22 23 24 39 40 42
    '>' (62) 19 21
    '{' (123) 11
    '}' (125) 11
    error (256)
    INT (258) 8
    VOID (259) 9
    FLOAT (260) 10
    RETURN (261) 16
    IDENT <str_val> (262) 6 34 38 39 40 42
    INT_CONST <int_val> (263) 43


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    CompUnit (25)
        on left: 1
        on right: 0
    DefUnits <ast_val> (26)
        on left: 2 3
        on right: 1 2
    DefUnit <ast_val> (27)
        on left: 4 5
        on right: 2 3
    FuncDef <ast_val> (28)
        on left: 6
        on right: 4
    DeclarationType <ast_val> (29)
        on left: 7
        on right: 6 35
    BasicType <str_val> (30)
        on left: 8 9 10
        on right: 7
    Block <ast_val> (31)
        on left: 11
        on right: 6
    Stmt <ast_val> (32)
        on left: 12
        on right: 11
    Sents <ast_val> (33)
        on left: 13 14
        on right: 12 13
    Sent <ast_val> (34)
        on left: 15 16 17
        on right: 5 13 14
    Expr <int_val> (35)
        on left: 18 19 20 21 22 23 24
        on right: 16 19 20 21 22 23 24 32 39 42
    CalExpr <int_val> (36)
        on left: 25 26 27
        on right: 18 19 20 21 22 23 24 25 26
    Expr_prio1 <int_val> (37)
        on left: 28 29 30 31
        on right: 25 26 27 28 29 30
    Expr_prio2 <int_val> (38)
        on left: 32 33 34
        on right: 28 29 30 31
    Declarationlist <ast_val> (39)
        on left: 35
        on right: 17
    Declarations <ast_val> (40)
        on left: 36 37
        on right: 35 36
    Declaration <ast_val> (41)
        on left: 38 39
        on right: 36 37
    Assignments <ast_val> (42)
        on left: 40 41
        on right: 15 40
    Assignment <ast_val> (43)
        on left: 42
        on right: 41
    Number <int_val> (44)
        on left: 43
        on right: 33


State 0

    0 $accept: . CompUnit $end

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    FLOAT   shift, and go to state 3
    RETURN  shift, and go to state 4
    IDENT   shift, and go to state 5

    CompUnit         go to state 6
    DefUnits         go to state 7
    DefUnit          go to state 8
    FuncDef          go to state 9
    DeclarationType  go to state 10
    BasicType        go to state 11
    Sent             go to state 12
    Declarationlist  go to state 13
    Assignments      go to state 14
    Assignment       go to state 15


State 1

    8 BasicType: INT .

    $default  reduce using rule 8 (BasicType)


State 2

    9 BasicType: VOID .

    $default  reduce using rule 9 (BasicType)


State 3

   10 BasicType: FLOAT .

    $default  reduce using rule 10 (BasicType)


State 4

   16 Sent: RETURN . Expr ';'

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr        go to state 19
    CalExpr     go to state 20
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 5

   40 Assignments: IDENT . '=' Assignments
   42 Assignment: IDENT . '=' Expr

    '='  shift, and go to state 24


State 6

    0 $accept: CompUnit . $end

    $end  shift, and go to state 25


State 7

    1 CompUnit: DefUnits .
    2 DefUnits: DefUnits . DefUnit

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    FLOAT   shift, and go to state 3
    RETURN  shift, and go to state 4
    IDENT   shift, and go to state 5

    $default  reduce using rule 1 (CompUnit)

    DefUnit          go to state 26
    FuncDef          go to state 9
    DeclarationType  go to state 10
    BasicType        go to state 11
    Sent             go to state 12
    Declarationlist  go to state 13
    Assignments      go to state 14
    Assignment       go to state 15


State 8

    3 DefUnits: DefUnit .

    $default  reduce using rule 3 (DefUnits)


State 9

    4 DefUnit: FuncDef .

    $default  reduce using rule 4 (DefUnit)


State 10

    6 FuncDef: DeclarationType . IDENT '(' ')' Block
   35 Declarationlist: DeclarationType . Declarations

    IDENT  shift, and go to state 27

    Declarations  go to state 28
    Declaration   go to state 29


State 11

    7 DeclarationType: BasicType .

    $default  reduce using rule 7 (DeclarationType)


State 12

    5 DefUnit: Sent .

    $default  reduce using rule 5 (DefUnit)


State 13

   17 Sent: Declarationlist . ';'

    ';'  shift, and go to state 30


State 14

   15 Sent: Assignments . ';'

    ';'  shift, and go to state 31


State 15

   41 Assignments: Assignment .

    $default  reduce using rule 41 (Assignments)


State 16

   34 Expr_prio2: IDENT .

    $default  reduce using rule 34 (Expr_prio2)


State 17

   43 Number: INT_CONST .

    $default  reduce using rule 43 (Number)


State 18

   32 Expr_prio2: '(' . Expr ')'

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr        go to state 32
    CalExpr     go to state 20
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 19

   16 Sent: RETURN Expr . ';'
   19 Expr: Expr . '>' CalExpr
   20     | Expr . '<' CalExpr
   21     | Expr . '>' '=' CalExpr
   22     | Expr . '<' '=' CalExpr
   23     | Expr . '=' '=' CalExpr
   24     | Expr . '!' '=' CalExpr

    ';'  shift, and go to state 33
    '>'  shift, and go to state 34
    '<'  shift, and go to state 35
    '='  shift, and go to state 36
    '!'  shift, and go to state 37


State 20

   18 Expr: CalExpr .
   25 CalExpr: CalExpr . '+' Expr_prio1
   26        | CalExpr . '-' Expr_prio1

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39

    $default  reduce using rule 18 (Expr)


State 21

   27 CalExpr: Expr_prio1 .
   28 Expr_prio1: Expr_prio1 . '*' Expr_prio2
   29           | Expr_prio1 . '/' Expr_prio2
   30           | Expr_prio1 . '%' Expr_prio2

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 27 (CalExpr)


State 22

   31 Expr_prio1: Expr_prio2 .

    $default  reduce using rule 31 (Expr_prio1)


State 23

   33 Expr_prio2: Number .

    $default  reduce using rule 33 (Expr_prio2)


State 24

   40 Assignments: IDENT '=' . Assignments
   42 Assignment: IDENT '=' . Expr

    IDENT      shift, and go to state 43
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr         go to state 44
    CalExpr      go to state 20
    Expr_prio1   go to state 21
    Expr_prio2   go to state 22
    Assignments  go to state 45
    Assignment   go to state 15
    Number       go to state 23


State 25

    0 $accept: CompUnit $end .

    $default  accept


State 26

    2 DefUnits: DefUnits DefUnit .

    $default  reduce using rule 2 (DefUnits)


State 27

    6 FuncDef: DeclarationType IDENT . '(' ')' Block
   38 Declaration: IDENT .
   39            | IDENT . '=' Expr

    '('  shift, and go to state 46
    '='  shift, and go to state 47

    $default  reduce using rule 38 (Declaration)


State 28

   35 Declarationlist: DeclarationType Declarations .
   36 Declarations: Declarations . ',' Declaration

    ','  shift, and go to state 48

    $default  reduce using rule 35 (Declarationlist)


State 29

   37 Declarations: Declaration .

    $default  reduce using rule 37 (Declarations)


State 30

   17 Sent: Declarationlist ';' .

    $default  reduce using rule 17 (Sent)


State 31

   15 Sent: Assignments ';' .

    $default  reduce using rule 15 (Sent)


State 32

   19 Expr: Expr . '>' CalExpr
   20     | Expr . '<' CalExpr
   21     | Expr . '>' '=' CalExpr
   22     | Expr . '<' '=' CalExpr
   23     | Expr . '=' '=' CalExpr
   24     | Expr . '!' '=' CalExpr
   32 Expr_prio2: '(' Expr . ')'

    ')'  shift, and go to state 49
    '>'  shift, and go to state 34
    '<'  shift, and go to state 35
    '='  shift, and go to state 36
    '!'  shift, and go to state 37


State 33

   16 Sent: RETURN Expr ';' .

    $default  reduce using rule 16 (Sent)


State 34

   19 Expr: Expr '>' . CalExpr
   21     | Expr '>' . '=' CalExpr

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18
    '='        shift, and go to state 50

    CalExpr     go to state 51
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 35

   20 Expr: Expr '<' . CalExpr
   22     | Expr '<' . '=' CalExpr

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18
    '='        shift, and go to state 52

    CalExpr     go to state 53
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 36

   23 Expr: Expr '=' . '=' CalExpr

    '='  shift, and go to state 54


State 37

   24 Expr: Expr '!' . '=' CalExpr

    '='  shift, and go to state 55


State 38

   25 CalExpr: CalExpr '+' . Expr_prio1

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr_prio1  go to state 56
    Expr_prio2  go to state 22
    Number      go to state 23


State 39

   26 CalExpr: CalExpr '-' . Expr_prio1

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr_prio1  go to state 57
    Expr_prio2  go to state 22
    Number      go to state 23


State 40

   28 Expr_prio1: Expr_prio1 '*' . Expr_prio2

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr_prio2  go to state 58
    Number      go to state 23


State 41

   29 Expr_prio1: Expr_prio1 '/' . Expr_prio2

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr_prio2  go to state 59
    Number      go to state 23


State 42

   30 Expr_prio1: Expr_prio1 '%' . Expr_prio2

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr_prio2  go to state 60
    Number      go to state 23


State 43

   34 Expr_prio2: IDENT .
   40 Assignments: IDENT . '=' Assignments
   42 Assignment: IDENT . '=' Expr

    '='  shift, and go to state 24

    '='       [reduce using rule 34 (Expr_prio2)]
    $default  reduce using rule 34 (Expr_prio2)


State 44

   19 Expr: Expr . '>' CalExpr
   20     | Expr . '<' CalExpr
   21     | Expr . '>' '=' CalExpr
   22     | Expr . '<' '=' CalExpr
   23     | Expr . '=' '=' CalExpr
   24     | Expr . '!' '=' CalExpr
   42 Assignment: IDENT '=' Expr .

    '>'  shift, and go to state 34
    '<'  shift, and go to state 35
    '='  shift, and go to state 36
    '!'  shift, and go to state 37

    $default  reduce using rule 42 (Assignment)


State 45

   40 Assignments: IDENT '=' Assignments .

    $default  reduce using rule 40 (Assignments)


State 46

    6 FuncDef: DeclarationType IDENT '(' . ')' Block

    ')'  shift, and go to state 61


State 47

   39 Declaration: IDENT '=' . Expr

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    Expr        go to state 62
    CalExpr     go to state 20
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 48

   36 Declarations: Declarations ',' . Declaration

    IDENT  shift, and go to state 63

    Declaration  go to state 64


State 49

   32 Expr_prio2: '(' Expr ')' .

    $default  reduce using rule 32 (Expr_prio2)


State 50

   21 Expr: Expr '>' '=' . CalExpr

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    CalExpr     go to state 65
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 51

   19 Expr: Expr '>' CalExpr .
   25 CalExpr: CalExpr . '+' Expr_prio1
   26        | CalExpr . '-' Expr_prio1

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39

    $default  reduce using rule 19 (Expr)


State 52

   22 Expr: Expr '<' '=' . CalExpr

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    CalExpr     go to state 66
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 53

   20 Expr: Expr '<' CalExpr .
   25 CalExpr: CalExpr . '+' Expr_prio1
   26        | CalExpr . '-' Expr_prio1

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39

    $default  reduce using rule 20 (Expr)


State 54

   23 Expr: Expr '=' '=' . CalExpr

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    CalExpr     go to state 67
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 55

   24 Expr: Expr '!' '=' . CalExpr

    IDENT      shift, and go to state 16
    INT_CONST  shift, and go to state 17
    '('        shift, and go to state 18

    CalExpr     go to state 68
    Expr_prio1  go to state 21
    Expr_prio2  go to state 22
    Number      go to state 23


State 56

   25 CalExpr: CalExpr '+' Expr_prio1 .
   28 Expr_prio1: Expr_prio1 . '*' Expr_prio2
   29           | Expr_prio1 . '/' Expr_prio2
   30           | Expr_prio1 . '%' Expr_prio2

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 25 (CalExpr)


State 57

   26 CalExpr: CalExpr '-' Expr_prio1 .
   28 Expr_prio1: Expr_prio1 . '*' Expr_prio2
   29           | Expr_prio1 . '/' Expr_prio2
   30           | Expr_prio1 . '%' Expr_prio2

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 26 (CalExpr)


State 58

   28 Expr_prio1: Expr_prio1 '*' Expr_prio2 .

    $default  reduce using rule 28 (Expr_prio1)


State 59

   29 Expr_prio1: Expr_prio1 '/' Expr_prio2 .

    $default  reduce using rule 29 (Expr_prio1)


State 60

   30 Expr_prio1: Expr_prio1 '%' Expr_prio2 .

    $default  reduce using rule 30 (Expr_prio1)


State 61

    6 FuncDef: DeclarationType IDENT '(' ')' . Block

    '{'  shift, and go to state 69

    Block  go to state 70


State 62

   19 Expr: Expr . '>' CalExpr
   20     | Expr . '<' CalExpr
   21     | Expr . '>' '=' CalExpr
   22     | Expr . '<' '=' CalExpr
   23     | Expr . '=' '=' CalExpr
   24     | Expr . '!' '=' CalExpr
   39 Declaration: IDENT '=' Expr .

    '>'  shift, and go to state 34
    '<'  shift, and go to state 35
    '='  shift, and go to state 36
    '!'  shift, and go to state 37

    $default  reduce using rule 39 (Declaration)


State 63

   38 Declaration: IDENT .
   39            | IDENT . '=' Expr

    '='  shift, and go to state 47

    $default  reduce using rule 38 (Declaration)


State 64

   36 Declarations: Declarations ',' Declaration .

    $default  reduce using rule 36 (Declarations)


State 65

   21 Expr: Expr '>' '=' CalExpr .
   25 CalExpr: CalExpr . '+' Expr_prio1
   26        | CalExpr . '-' Expr_prio1

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39

    $default  reduce using rule 21 (Expr)


State 66

   22 Expr: Expr '<' '=' CalExpr .
   25 CalExpr: CalExpr . '+' Expr_prio1
   26        | CalExpr . '-' Expr_prio1

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39

    $default  reduce using rule 22 (Expr)


State 67

   23 Expr: Expr '=' '=' CalExpr .
   25 CalExpr: CalExpr . '+' Expr_prio1
   26        | CalExpr . '-' Expr_prio1

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39

    $default  reduce using rule 23 (Expr)


State 68

   24 Expr: Expr '!' '=' CalExpr .
   25 CalExpr: CalExpr . '+' Expr_prio1
   26        | CalExpr . '-' Expr_prio1

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39

    $default  reduce using rule 24 (Expr)


State 69

   11 Block: '{' . Stmt '}'

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    FLOAT   shift, and go to state 3
    RETURN  shift, and go to state 4
    IDENT   shift, and go to state 5

    DeclarationType  go to state 71
    BasicType        go to state 11
    Stmt             go to state 72
    Sents            go to state 73
    Sent             go to state 74
    Declarationlist  go to state 13
    Assignments      go to state 14
    Assignment       go to state 15


State 70

    6 FuncDef: DeclarationType IDENT '(' ')' Block .

    $default  reduce using rule 6 (FuncDef)


State 71

   35 Declarationlist: DeclarationType . Declarations

    IDENT  shift, and go to state 63

    Declarations  go to state 28
    Declaration   go to state 29


State 72

   11 Block: '{' Stmt . '}'

    '}'  shift, and go to state 75


State 73

   12 Stmt: Sents .
   13 Sents: Sents . Sent

    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    FLOAT   shift, and go to state 3
    RETURN  shift, and go to state 4
    IDENT   shift, and go to state 5

    $default  reduce using rule 12 (Stmt)

    DeclarationType  go to state 71
    BasicType        go to state 11
    Sent             go to state 76
    Declarationlist  go to state 13
    Assignments      go to state 14
    Assignment       go to state 15


State 74

   14 Sents: Sent .

    $default  reduce using rule 14 (Sents)


State 75

   11 Block: '{' Stmt '}' .

    $default  reduce using rule 11 (Block)


State 76

   13 Sents: Sents Sent .

    $default  reduce using rule 13 (Sents)
